# rlmcode

./: .env.example  .gitignore  .oxlintrc.json  .worktreeinclude  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  JUMBO.md  LICENSE  README.md  REFERENCE.md  SECURITY.md  THIRD-PARTY-LICENSES.md  _turn_repro.ts  build-viz.ts  package-lock.json  package.json  skills-lock.json  smoke-atom.ts  smoke-emit.ts  smoke-tools.ts  tsconfig.core.json  tsconfig.json  vitest.config.ts
.changeset/: config.json
.claude/: settings.json
.codex/: hooks.json
.cursor/: hooks.json
.githooks/: pre-commit
.jumbo/: jumbo.db  settings.jsonc
assets/: .gitignore  demo-real.tape  demo.tape
docs/: BRANDING.md  DEBT-AUDIT.md  ENGINE-HARDEN.md  RELEASE-AUDIT.md  STUCK-ANALYSIS.md  gtm-plan.md
examples/: sdk-usage.ts
schemas/: frame-v1.schema.json
scripts/: _rlm_fix_probe.ts  _span_probe.ts  _workflow_live.ts  debt-audit.ts  design-check.test.ts  design-check.ts  focus-live.test.ts  gepa.test.ts  graceful-maxsteps-probe.ts  lint-coordination.test.ts  orch-core.test.ts  orch-cost.test.ts  orch-journal.test.ts  orch-live.test.ts  orch-retry.test.ts  orch-route.test.ts  orch-tree-render.test.ts  orch.test.ts  oxlint-check.test.ts  oxlint-check.ts  ponytail-debt.test.ts  ponytail-debt.ts  rlm-contract.test.ts  session-leak.test.ts  telemetry-live.test.ts  toolui-diff.test.ts  turn-event-roundtrip.test.ts  turn-memo.test.ts  turn-stall.test.ts  workflow-live.test.ts  workflow-timeout.test.ts
src/: activity.ts  agent.ts  atoms.ts  chat.tsx  clipboard.ts  sdk.ts  (+27 more)
(+203 files in other folders)
