[package]
name = "terminal-control"
version = "0.3.0"
edition = "2024"
rust-version = "1.93"
description = "Control and test terminal applications through stable visible state"
license = "MIT"
repository = "https://github.com/kitlangton/terminal-control"
readme = "README.md"
keywords = ["terminal", "tui", "testing", "automation", "ansi"]
categories = ["command-line-utilities", "development-tools::testing"]
include = ["/src/**", "/schemas/**", "/Cargo.toml", "/Cargo.lock", "/README.md", "/LICENSE"]
autobins = false

[[bin]]
name = "termctrl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
portable-pty = "0.9.0"
resvg = { version = "0.47.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vt100 = "0.16.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
